Replace File api for Path api in ImageToAvif class